# cli

./: .gitignore  Makefile  README.md  cli.py  cli.spec  main.py  main.spec  pyproject.toml  requirements.txt
src/: __init__.py  main.py  make.py  prompt.py  shell.py  util.py
