[tool.poetry]
name = "cli"
version = "0.0.1"
description = ""
authors = ["smoll"]

[tool.poetry.dependencies]
python = "^3.6"
questionary = "^1.5.1"
shell = { git = "https://github.com/toastdriven/shell.git", rev = "58625cd" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
